add function reject update-reject and show all-record
